
	Made :tree pick up list of files from custom view.  Thanks to filterfalse.

	Do not go to start of line on Ctrl-U/Ctrl-D/Ctrl-F/Ctrl-B/G in ls-like view.

	Documented more details about 'vicmd' and 'vixcmd' options.  Thanks to
	Sebastian Cyprych.

	Made :highlight update file-specific group on exact match of the pattern
	instead of appending new rule.  Thanks to aleksejrs.

	Fixed positioning cursor in directory :history when inside custom view.
	Thanks to filterfalse.

	Fixed compilation of modes/view.c when build is configured with
	`--disable-extended-keys`.  Thanks to Bearcat M. Şándor (a.k.a.
	bearcatsandor).

	Fixed crashes discovered via fuzzing, most of which require rather
	unusual kind of input.

	Fixed running commands with arguments on Windows when 'shell' isn't
	cmd.exe.

	Fixed ".." not being preserved in path loaded into custom view.  Thanks to
	filterfalse.

	Fixed directory size in statusline.  Patch by Dmitry Frank (a.k.a.
	dimonomid).

	Fixed extra width of inactive cursor in ls-like view when 'classify'
	contains Unicode characters.

	Fixed stopping of put operation after copying symbolic link that's broken
	on destination.  Thanks to filterfalse.

	Fixed formatting of root directory in custom view, it displayed too many
	slashes.  Thanks to filterfalse.

	Fixed not recording last visited directory on leaving custom view.  Thanks
	to filterfalse.

	Fixed displaying of wild menu popup when statusbar is more than single
	line in height.

	Fixed weird view scrolling after zO (hard to notice) and Ctrl-A/X.

0.9-beta to 0.9

	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.

	Don't use :filextype in sample vifmrc for OS X, we can't tell whether
	graphical system is running.  Thanks to piotryordanov.

	Do not add extra slash to path on picking files in the root.  Thanks to
	filterfalse.

	Properly escape newline when passing things into shell.  Thanks to
	filterfalse.
